[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = [" annavaleriev <filenko.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
httpx = "^0.28.1"
pydantic = {extras = ["dotenv"], version = "^2.11.7"}
python-dotenv = "^1.1.1"
pyshorteners = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
